# airflow-python-task-test

./: Dockerfile  README.md  pyproject.toml  pyrightconfig.json
dynamic_dags/: __init__.py
dynamic_dags/dags/: .airflowignore  __init__.py
dynamic_dags/lib/: dag_maker.py  queries.py
dynamic_dags/models/: BatteryCapacityChange.py
dynamic_dags/plugins/: plugins.py  timetables.py
dynamic_dags/utils/: calculate_jitter_amount.py  even_batches.py  generate_batch_tasks.py
